force-app/main/default/objects/Doctor__c/fields/Speciality__c.field-meta.xml
<CustomField>
    <fullName>Speciality__c</fullName>
    <label>Speciality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergist</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
            <value>
                <fullName>Primary care doctor</fullName>
            </value>
            <value>
                <fullName>Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>