force-app/main/default/objects/Doctor__c/fields/Start_of_Career__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Career__c</fullName>
    <label>Start of Career</label>
    <type>Date</type>
</CustomField>