force-app/main/default/objects/Doctor__c/validationRules/Email_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Format_Validation</fullName>
    <active>true</active>
    <description>Email format is invalid.</description>
    <errorConditionFormula>NOT REGEX( Email__c  , &quot;^$|[a-z_\\-1-9\\.]+@[a-z]+(\\.[a-z]+)+&quot;)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email format is invalid.</errorMessage>
</ValidationRule>