force-app/main/default/objects/Doctor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Start_of_Career__c</columns>
    <columns>Speciality__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>